[gd_scene load_steps=8 format=3 uid="uid://dohwppgl1ps23"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_wfdny"]
[ext_resource type="Script" path="res://scenes/game/progressBarSecondsMode.gd" id="2_5472w"]
[ext_resource type="PackedScene" uid="uid://bi6v8tickren2" path="res://components/card/card.tscn" id="3_5epv8"]
[ext_resource type="PackedScene" uid="uid://b0s4hl7u5qa5r" path="res://components/uiButton/uiButtonsInGame.tscn" id="4_0nje2"]
[ext_resource type="PackedScene" uid="uid://bnjxfcpaoykba" path="res://components/cardSwipe/cardSwipe.tscn" id="5_pl3wq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jfped"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oscr7"]
size = Vector2(431, 1023)

[node name="Game" type="Node2D"]
script = ExtResource("1_wfdny")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="gameScene" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="playerContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/gameScene"]
layout_mode = 2
alignment = 1

[node name="secondsProgressBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/gameScene"]
visible = false
layout_mode = 2
max_value = 10.0
step = 1.0
value = 10.0
script = ExtResource("2_5472w")

[node name="Timer" type="Timer" parent="CanvasLayer/MarginContainer/gameScene/secondsProgressBar"]
one_shot = true

[node name="gameModeSectionStart" type="Control" parent="CanvasLayer/MarginContainer/gameScene"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 1

[node name="truthDareContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/gameScene"]
visible = false
layout_mode = 2
alignment = 1

[node name="truth" parent="CanvasLayer/MarginContainer/gameScene/truthDareContainer" instance=ExtResource("3_5epv8")]
layout_mode = 2
mouse_filter = 0
gameMode = ""
content = "Truth"
author = ""

[node name="dare" parent="CanvasLayer/MarginContainer/gameScene/truthDareContainer" instance=ExtResource("3_5epv8")]
layout_mode = 2
mouse_filter = 0
gameMode = ""
content = "Dare"
author = ""

[node name="playerTurnAndHint" type="VBoxContainer" parent="CanvasLayer/MarginContainer/gameScene"]
visible = false
layout_mode = 2
alignment = 1

[node name="playerTrun" type="Label" parent="CanvasLayer/MarginContainer/gameScene/playerTurnAndHint"]
layout_mode = 2
text = "test turn"
horizontal_alignment = 1

[node name="hint" type="Label" parent="CanvasLayer/MarginContainer/gameScene/playerTurnAndHint"]
layout_mode = 2
text = "jakiś hint na gerikę idk co tutaj może być potem"
horizontal_alignment = 1

[node name="gameModeSectionEnd" type="Control" parent="CanvasLayer/MarginContainer/gameScene"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 1

[node name="uiButtonsInGame" parent="CanvasLayer" instance=ExtResource("4_0nje2")]
setsButton = "showCard"

[node name="mainCard" parent="CanvasLayer" instance=ExtResource("5_pl3wq")]

[node name="skipButton" type="Button" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0)
theme_override_styles/normal = SubResource("StyleBoxFlat_jfped")
theme_override_styles/hover = SubResource("StyleBoxFlat_jfped")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jfped")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jfped")
theme_override_styles/focus = SubResource("StyleBoxFlat_jfped")

[node name="rejectArea" type="Area2D" parent="."]
position = Vector2(-834, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="rejectArea"]
position = Vector2(719, 512)
shape = SubResource("RectangleShape2D_oscr7")

[node name="completeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="completeArea"]
position = Vector2(719, 512)
shape = SubResource("RectangleShape2D_oscr7")

[connection signal="timerEmpty" from="CanvasLayer/MarginContainer/gameScene/secondsProgressBar" to="." method="_on_seconds_progress_bar_timer_empty"]
[connection signal="timeout" from="CanvasLayer/MarginContainer/gameScene/secondsProgressBar/Timer" to="CanvasLayer/MarginContainer/gameScene/secondsProgressBar" method="_on_seconds_timer_timeout"]
[connection signal="click" from="CanvasLayer/MarginContainer/gameScene/truthDareContainer/truth" to="." method="_on_dare_button" binds= [true]]
[connection signal="click" from="CanvasLayer/MarginContainer/gameScene/truthDareContainer/dare" to="." method="_on_dare_button" binds= [false]]
[connection signal="uiButton" from="CanvasLayer/uiButtonsInGame" to="." method="_on_ui_buttons"]
[connection signal="pressed" from="CanvasLayer/skipButton" to="." method="_on_skip_button_pressed"]
[connection signal="area_entered" from="rejectArea" to="." method="_on_entered" binds= [true]]
[connection signal="area_exited" from="rejectArea" to="." method="_on_exited" binds= [true]]
[connection signal="area_entered" from="completeArea" to="." method="_on_entered" binds= [false]]
[connection signal="area_exited" from="completeArea" to="." method="_on_exited"]
